--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "link": "^0.1.5",
     "react": "16.6.3",
     "react-native": "^0.58.6",
     "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^1.0.0",
-    "react-native-geospark": "^1.1.1",
+    "react-native-geospark": "^2.1.1",
+    "react-native-gesture-handler": "^1.4.1",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.1.3"
   },
