React Native SDK 2.1.1 Updated.
1) Removed firebase in android.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,11 +147,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation 'com.facebook.react:react-native:+'
     // From node_modules
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation ("com.geospark.android:geospark:2.1.1"){
-        exclude group: 'com.google.android.gms', module: 'play-services-location'
-    }
-    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.geospark.android:geospark:2.1.1'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -160,4 +156,3 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
-apply plugin: 'com.google.gms.google-services'
