--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,6 +103,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -135,14 +136,14 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-geospark')
+    implementation project(':react-native-geospark-test')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-vector-icons')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation 'com.facebook.react:react-native:+'
     // From node_modules
-    implementation 'com.geospark.android:geospark:2.2.5'
+    implementation 'com.geospark.android:geospark:3.0.4'
 }
 
 // Run this once to be able to run the application with BUCK
