--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'mymodule'
+include ':react-native-geospark-test'
+project(':react-native-geospark-test').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geospark-test/android/app')
 include ':react-native-geospark'
 project(':react-native-geospark').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geospark/android/app')
 include ':react-native-gesture-handler'
