--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,7 +136,7 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-geospark-test')
+    implementation project(':react-native-geospark')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-vector-icons')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
